[package]
name = "actix-web-async-await"
description = "Provides a preview of Actix with async/await support."
version = "0.2.0"
edition = "2018"
authors = ["Q Misell <q@magicalcodewit.ch>"]
repository = "https://github.com/TheEnbyperor/actix-web-async-await"
license = "MIT/Apache-2.0"
keywords = ["web", "actix", "async", "await"]
categories = ["asynchronous", "web-programming::http-server"]
readme = "README.md"

[dependencies]
actix-web = "1.0"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }

[dev-dependencies]
tokio = "0.1"
failure = "0.1"
